Refactor skill retrieval and update UI for skills display
- Changed the method in SkillService to return a map of skills grouped by category instead of a list.
- Updated AllSkillsController to reflect the new data structure.
- Modified all-skills.html to display skills categorized, enhancing the user interface.
- Added new CSS styles for category sections to improve layout and visual appeal.